--- a/src/styles.css
+++ b/src/styles.css
@@ -6,13 +6,18 @@ body{
     padding: 0;
     background-color: #eeeeee;
     font-family: 'Mukta', sans-serif;
-
 }
 
+#app{
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap:2px
+}
 
 /* HEADER STYLES */
 
 .header {
+    grid-column: 1/ -1;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -24,7 +29,6 @@ body{
     color:#76323f;
  
   }
-
 
   .logo{
     margin-bottom: 0;
@@ -52,7 +56,8 @@ body{
     color:#76323f;
 }
 
-.nav-btn{
+.nav-btn,
+.hero-section-btn{
     background-color: #D7CEC7;
     border: none;
     border-radius: 9px;
@@ -60,7 +65,8 @@ body{
     box-shadow: 1px 1px 3px #76323F;
 }
 
-.nav-btn:hover{
+.nav-btn:hover,
+.hero-section-btn:hover{
     box-shadow: 2px 3px 3px #565656;
 
 }
@@ -70,7 +76,8 @@ body{
 }
 
 
-.signup-btn{
+.signup-btn,
+.hero-section-btn{
    color: #D7CEC7;
    background-color: #76323F;
    padding:20px 15px 20px;
@@ -78,6 +85,55 @@ body{
 }
 
 .division{
+    grid-column: 1/ -1;
     height: 1px;
     background-color: #C09F80;
+   
 }
+
+
+/* HERO SECTION */
+
+.hero-section{
+    grid-column: 1/ -1;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* flex-direction: column; */
+    height: 75vh;
+    background-image: url("../src/hero-img1.png");
+    background-size: cover;
+}
+
+.hero-section-text-top{
+    color: #343434;
+   
+    /* width: 50%; */
+    text-align: center;
+    font-size: 45px;
+    align-self: flex-start;
+    margin-top: 5%;
+    margin-left: 5%;
+
+}
+
+.hero-section-text-bottom{
+    color: #343434;
+    /* width: 50%; */
+    font-size: 35px;
+    text-align: center;
+    align-self: flex-start;
+    margin-top: 5%;
+    margin-left: 5%;
+
+}
+
+.hero-section-btn{
+    width:30%;
+    padding:20px 45px 20px;
+    align-self: center;
+    margin-bottom: 5%;
+    margin-right: 5%;
+}
+
+
