--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,3 @@
-
-
 body{
     box-sizing: border-box;
     margin: 0;
@@ -137,3 +135,17 @@ body{
 }
 
 
+/* SIGN UP PAGE */
+
+.signup-container{
+    grid-column: 3/10;
+    border: 1px solid #76323f;
+    margin-top: 30%;
+}
+
+.signup-form{
+    grid-column: 4/7;
+    padding:30%;
+    width: 30%;
+
+}
