--- a/src/styles.css
+++ b/src/styles.css
@@ -1,164 +1,175 @@
 body {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  background-color: #eeeeee;
-  font-family: "Mukta", sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: #eeeeee;
+    font-family: 'Mukta', sans-serif;
 }
 
 #app {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  gap: 2px;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 2px;
 }
 
 /* HEADER STYLES */
 
 .header {
-  grid-column: 1/ -1;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-left: 25px;
-  margin: 12px;
-  margin-bottom: 0;
-  font-weight: 700;
-  font-size: 32px;
-  color: #76323f;
+    grid-column: 1/ -1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 25px;
+    margin: 12px;
+    margin-bottom: 0;
+    font-weight: 700;
+    font-size: 32px;
+    color: #76323f;
 }
 
 .logo {
-  margin-bottom: 0;
-  margin-top: 0;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 .nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  list-style: none;
-  margin-right: 10px;
-  margin-bottom: 0;
-  margin-top: 0;
-  font-size: 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    margin-right: 10px;
+    margin-bottom: 0;
+    margin-top: 0;
+    font-size: 24px;
 }
 
 .nav-elem {
-  margin: 5px;
-  padding: 15px;
+    margin: 5px;
+    padding: 15px;
 }
 
 .nav-link {
-  text-decoration: none;
-  color: #76323f;
+    text-decoration: none;
+    color: #76323f;
 }
 
 .nav-btn,
 .hero-section-btn {
-  background-color: #d7cec7;
-  border: none;
-  border-radius: 9px;
-  font-size: 18px;
-  box-shadow: 1px 1px 3px #76323f;
+    background-color: #d7cec7;
+    border: none;
+    border-radius: 9px;
+    font-size: 18px;
+    box-shadow: 1px 1px 3px #76323f;
 }
 
 .nav-btn:hover,
 .hero-section-btn:hover,
 .signup-form-btn:hover {
-  box-shadow: 2px 3px 3px #565656;
+    box-shadow: 2px 3px 3px #565656;
 }
 
 .login-btn {
-  padding: 10px;
+    padding: 10px;
 }
 
 .signup-btn,
 .hero-section-btn,
 .signup-form-btn {
-  color: #d7cec7;
-  background-color: #76323f;
-  padding: 20px 15px 20px;
+    color: #d7cec7;
+    background-color: #76323f;
+    padding: 20px 15px 20px;
 }
 
 .division {
-  grid-column: 1/ -1;
-  height: 1px;
-  background-color: #c09f80;
+    grid-column: 1/ -1;
+    height: 1px;
+    background-color: #c09f80;
 }
 
 /* HERO SECTION */
 
 .hero-section {
-  grid-column: 1/ -1;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  /* flex-direction: column; */
-  height: 75vh;
-  background-image: url("../src/hero-img1.png");
-  background-size: cover;
+    grid-column: 1/ -1;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* flex-direction: column; */
+    height: 75vh;
+    background-image: url('../src/hero-img1.png');
+    background-size: cover;
 }
 
 .hero-section-text-top {
-  color: #343434;
+    color: #343434;
 
-  /* width: 50%; */
-  text-align: center;
-  font-size: 45px;
-  align-self: flex-start;
-  margin-top: 5%;
-  margin-left: 5%;
+    /* width: 50%; */
+    text-align: center;
+    font-size: 45px;
+    align-self: flex-start;
+    margin-top: 5%;
+    margin-left: 5%;
 }
 
 .hero-section-text-bottom {
-  color: #343434;
-  /* width: 50%; */
-  font-size: 35px;
-  text-align: center;
-  align-self: flex-start;
-  margin-top: 5%;
-  margin-left: 5%;
+    color: #343434;
+    /* width: 50%; */
+    font-size: 35px;
+    text-align: center;
+    align-self: flex-start;
+    margin-top: 5%;
+    margin-left: 5%;
 }
 
 .hero-section-btn {
-  width: 30%;
-  padding: 20px 45px 20px;
-  align-self: center;
-  margin-bottom: 5%;
-  margin-right: 5%;
+    width: 30%;
+    padding: 20px 45px 20px;
+    align-self: center;
+    margin-bottom: 5%;
+    margin-right: 5%;
+}
+/* BOOK SLIDER*/
+
+.book-list-div {
+    grid-column: 1/-1;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.book-container-title {
+    margin-left: 5%;
+    color: #343434;
 }
 
 /* SIGN UP PAGE */
 
 .signup-container {
-  grid-column: 3/10;
-  border: 1px solid #76323f;
-  margin-top: 10%;
-  margin-left: 30%;
-  width: 60%;
-  height: 500px;
-  border-radius: 9px;
-  box-shadow: 2px 3px 3px #c09f80;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
+    grid-column: 3/10;
+    border: 1px solid #76323f;
+    margin-top: 10%;
+    margin-left: 30%;
+    width: 60%;
+    height: 500px;
+    border-radius: 9px;
+    box-shadow: 2px 3px 3px #c09f80;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.signup-title{
+.signup-title {
     color: #343434;
 }
 
 .signup-form {
-  grid-column: 4/7;
-  padding: 5%;
-  width: 30%;
-  font-size: 24px;
-  text-align: left;
-  color: #343434;
+    grid-column: 4/7;
+    padding: 5%;
+    width: 30%;
+    font-size: 24px;
+    text-align: left;
+    color: #343434;
 }
 
-.signup-form-btn{
+.signup-form-btn {
     border: none;
     border-radius: 9px;
     padding: 10px 10px 10px;
@@ -166,50 +177,48 @@ body {
 
 /* FOOTER */
 
-
 .footer-container {
-  grid-column: 1/-1;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  color: #76323f;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 100px;
-  padding-left: 5%;
-  
+    grid-column: 1/-1;
+    display: flex;
+
+    justify-content: space-around;
+    align-items: center;
+    color: #76323f;
+    background-color: #eeeeee;
+    position: sticky;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    padding-left: 5%;
 }
 
 .footer-list,
 .social-network {
-  list-style: none;
-  display: flex;
-  align-items:center;
-  justify-content: space-around;
-  font-size: 12px;
-  color: #565656;
-  padding-right: 5%;
-
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 12px;
+    color: #565656;
+    padding-right: 5%;
 }
 
 .footer-item {
-  padding-right: 60px;
-  padding-left: 60px;
-  align-self: center;
+    padding-right: 60px;
+    padding-left: 60px;
+    align-self: center;
 }
 
 .footer-link {
-  text-decoration: none;
-  color: #565656;
+    text-decoration: none;
+    color: #565656;
 }
 .social-network {
     padding-top: 5px;
     align-items: flex-end;
 }
-.social-network-item{
+.social-network-item {
     font-size: 18px;
-    padding-left:5px;
+    padding-left: 5px;
     align-self: flex-end;
-
 }
