--- a/src/styles.css
+++ b/src/styles.css
@@ -73,7 +73,7 @@ body {
 }
 
 .signup-btn,
-.hero-section-btn,
+.hero-section-btn, 
 .signup-form-btn {
     color: #d7cec7;
     background-color: #76323f;
@@ -223,3 +223,219 @@ body {
     padding-left: 5px;
     align-self: flex-end;
 }
+
+
+
+/* PROFILE */
+
+.profile{
+
+    color:#76323F;
+
+    display: flex;
+
+    flex-direction: row;
+
+    justify-content:space-evenly;
+
+    font-size: 30px;
+
+}
+.edit-profile-btn{
+    background-color: black;
+}
+/*.button{
+
+    margin-top: 80px;
+
+    padding: 7px;
+
+    cursor: pointer;
+
+    text-align: center;
+
+}*/
+scan{
+    
+    margin: 50px auto;
+
+    background-color: rgba(146, 142, 142, 0.3);
+
+    width: 450px;
+    
+    
+}
+.Edit{
+
+    display: flex;
+
+    flex-direction: column;
+
+    justify-content:center ;
+
+    color: #76323F;
+
+}
+/*.editButton button{
+    margin-left: 340px;
+
+    width: 120px
+}*/
+.login{
+
+    display: flex;
+
+    flex-direction: column;
+
+    align-items: center;
+
+    justify-content: center;
+
+    height: 400px; 
+}
+
+ #logo {
+
+    max-width: 200px; max-height: 150px;
+
+    border-radius: 50%;
+
+}
+/* LOGIN */
+#login {
+
+    display: flex;
+
+    align-items: center;
+
+    justify-content: center;
+
+    height: 100vh;
+
+    font-family: Ek Mukta;
+}
+
+#card {
+    background-color: rgba(146, 142, 142, 0.3);
+   
+    padding: 40px;
+
+    border-radius: 2px;
+
+    width:280px;
+ 
+
+}
+
+.card-header {
+
+    padding-bottom: 50px;
+
+    opacity: 0.8;
+
+    color: #76323F;
+    
+
+}
+
+.card-header::after {
+
+    content: "";
+
+    width: 90px;
+
+    height: 1px;
+
+    background-color: #76323F;
+
+    display: block;
+
+    margin-top: -17px;
+
+    margin-left: -5px;
+    
+    
+
+}
+
+.card-content label {
+
+    color: #76323F;
+
+    font-size: 15px;
+
+    opacity: 0.8;
+    
+   
+
+}
+
+.card-content-area {
+
+    display: flex;
+
+    flex-direction: column;
+
+    padding:10px 0;
+   
+}
+
+.card-content-area input {
+
+    margin-top: 10px;
+
+    padding:0 5px;
+
+    background-color: transparent;
+
+    border:none;
+
+    border-bottom: 1px solid #76323F;
+
+    outline: none;
+
+    color: #76323F;
+
+}
+
+.card-footer {
+
+    display: flex;
+
+    flex-direction: column;
+
+    margin-top: 20px;
+
+}
+
+.card-footer .submit{
+
+    width: 100%;
+
+    height: 40px;
+
+    background-color: #a13854;
+
+    border:none;
+
+    color:#76323F;
+
+    margin: 10px 0;
+    
+
+}
+
+.card-footer a {
+
+    text-align: center;
+
+    font-size: 12px;
+
+    opacity: 0.8;
+
+    color: #76323F;
+
+    text-decoration: none;
+    
+}
+
