--- a/src/pages/bookPage/bookPage.css
+++ b/src/pages/bookPage/bookPage.css
@@ -1,6 +1,12 @@
 #bookCover{
     grid-area: bookCover;
     padding: 20px;
+    
+}
+
+#CoverOfBook{
+    width: 270px;
+    height: 400px;
 }
 
 #bookDetails{
@@ -13,17 +19,39 @@
     font-size: 30px;
 }
 
-#editButton{
+.editBt{
+    color: white;
     grid-area: edit;
-    padding-bottom: 20px;
+    width: 100px;
+    height: 35px;
+    margin-bottom: 50px;
+    background-color:#76323f;
+    border-radius: 9px;
+    font-size: 18px;
+    box-shadow: 1px 1px 3px #d7cec7;
     
 }
+
+.editBt2{
+    color: white;
+    grid-area: edit;
+    width: 100px;
+    height: 25px;
+    margin-bottom: 5px;
+    background-color:#76323f;
+    border-radius: 9px;
+    font-size: 10px;
+    box-shadow: 1px 1px 3px #d7cec7;
+    
+}
+
 
 .bookInfo{
     display: grid;
     border: 1px solid lightgray;
     width: 900px;
-    height: 600px;
+    height: 500px;
+    margin-left: 50%;
     box-shadow: 0px 3px 3px 1px  lightgray;
     grid-template-areas:"bookCover details"
                         "bookCover details"
@@ -32,33 +60,33 @@
     text-align: center;
 }
 
-
-.bookPage{
+.editBook{
     display: grid;
-    border: 1px solid lightgray;
-    width: 900px;
-    height: 600px;
-    box-shadow: 0px 3px 3px 1px  lightgray;
+    grid-template-areas: "bookC updateForm"
+                         "bookC updateButtons";
+    text-align: center;
+    margin-top: 100px;
+    margin-left: 50%;
     
 }
 
-.editBook{
-    display: grid;
-    grid-template-areas: "updateForm"
-                         "updateButtons";
-    text-align: center;
-    margin-top: 100px;
-}
+
 
 .editButtons{
     display: flex;
     grid-area: updateButtons;
     margin-bottom: 150px;
     flex-direction: column;
-    gap:10px
+    
 }
 
 #updateForm{
 grid-area: updateForm;
 }
 
+#bookC{
+    grid-area: bookC;
+    width: 200px;
+    height: 300px;
+    margin-right: 20px;
+}
