--- a/src/styles.css
+++ b/src/styles.css
@@ -65,7 +65,8 @@ body {
 .nav-btn:hover,
 .hero-section-btn:hover,
 .signup-form-btn:hover,
-.login-form-btn:hover {
+.login-form-btn:hover,
+.edit-profile-btn:hover {
   box-shadow: 2px 3px 3px #565656;
 }
 
@@ -146,7 +147,7 @@ body {
 /* SIGN UP PAGE */
 
 .signup-container,
-.login-container {
+.login-container{
   grid-column: 3/10;
   border: 1px solid #76323f;
   margin-top: 10%;
@@ -229,62 +230,81 @@ body {
 }
 
 /* PROFILE */
+.login-redirect{
+  grid-column: 1/-1;
+  margin: 5%;
+}
 
 .profile {
+
+  grid-column: 3/10;
   color: #76323f;
-
   display: flex;
-
-  flex-direction: row;
-
-  justify-content: space-evenly;
-
+  margin-top: 15%;
+  justify-content: space-around;
   font-size: 30px;
+
+  margin-bottom: 15%;
 }
+
 .edit-profile-btn {
-  background-color: black;
+  background-color: #76323f;
+  position: absolute;
+  top:28%;
+  color: #d7cec7;
+  padding: 10px 10px 10px;
+
+  border-radius: 9px;
+  margin-bottom: 15%;
+  margin-left: 10px;
+
 }
-/*.button{
 
-    margin-top: 80px;
+.edit-profile-container{
+  grid-column: 5/10;
+  box-shadow: 1px 2px 4px #343434;
+  border-radius: 9px;
+  margin-bottom: 5%;
+}
 
-    padding: 7px;
+.save-profile-btn{
+  background-color: #76323f;
+  padding: 10px 10px 10px;
+  position: relative;
+  margin-right: 10%;
+  margin-left: 70%;
+  margin-bottom: 5%;
+  border-radius: 9px;
+  color:#d7cec7;
+}
 
-    cursor: pointer;
 
-    text-align: center;
-
-}*/
 scan {
   margin: 50px auto;
+}
 
-  background-color: rgba(146, 142, 142, 0.3);
+scan input{
+  border: none;
+  background-color: #eeeeee;
+  border-bottom: 1px dotted #76323f;
 
-  width: 450px;
+}
+
+scan h3{
+  padding-bottom: 7px;
 }
 .Edit {
   display: flex;
-
   flex-direction: column;
-
-  justify-content: center;
-
+  justify-content: space-around;
+  align-items:center;
   color: #76323f;
 }
-/*.editButton button{
-    margin-left: 340px;
 
-    width: 120px
-}*/
 .login {
   display: flex;
-
   flex-direction: column;
-
-  align-items: center;
-
   justify-content: center;
-
   height: 400px;
 }
 
@@ -294,6 +314,7 @@ scan {
 
   border-radius: 50%;
 }
+
 /* LOGIN */
 
 .login-form {
